--- a/jitpack.yml
+++ b/jitpack.yml
@@ -2,4 +2,4 @@ jdk:
   - openjdk17
 
 install:
-  - ./gradlew :library:assembleRelease
+  - ./gradlew :library:publishReleasePublicationToJitpackRepository
